--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Built application files
 *.apk
 *.ap_
@@ -35,6 +36,11 @@ captures/
 # Intellij
 *.iml
 .idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/libraries
 
 # Keystore files
 *.jks
+
+# External native build folder generated in Android Studio 2.2 and later
